<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_clear"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/clear_text"
        app:showAsAction="always"
        android:orderInCategory="100"
        />

    <item android:id="@+id/action_open"
        android:icon="@android:drawable/ic_menu_zoom"
        android:title="@string/open_text"
        app:showAsAction="always"
        android:orderInCategory="100"
        />

    <item android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save_text"
        app:showAsAction="always"
        android:orderInCategory="100"
        />

    <item android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/settings"
        app:showAsAction="never"
        android:orderInCategory="100"
        />
</menu>